Capstone_project/capstone_projectlab2/6-sg.tf
resource "aws_security_group" "alexis_sg" {
  name        = "alexis_sg"
  description = "Allow inbound traffic and all outbound traffic to my bedroom"
  vpc_id      = aws_vpc.alexis_vpc.id

  tags = {
    Name = "alexis_sg"
  }
}

resource "aws_vpc_security_group_ingress_rule" "alexis-sg-ssh" {
  security_group_id = aws_security_group.alexis_sg.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 22
  ip_protocol       = "tcp"
  to_port           = 22
  
  tags = {
    Name = "SSH"
  }
}

resource "aws_vpc_security_group_ingress_rule" "alexis-sg-http" {
  security_group_id = aws_security_group.alexis_sg.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 80
  ip_protocol       = "tcp"
  to_port           = 80
  
  tags = {
    Name = "HTTP"
  }
}

resource "aws_vpc_security_group_egress_rule" "alexis-sg-egress_all_traffic_ipv4" {
  security_group_id = aws_security_group.alexis_sg.id
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1" # semantically equivalent to all ports
}

# resource "aws_vpc_security_group_egress_rule" "allow_all_traffic_ipv6" {
#   security_group_id = aws_security_group.allow_tls.id
#   cidr_ipv6         = "::/0"
#   ip_protocol       = "-1" # semantically equivalent to all ports
# }
